Squashed commit of the following:
commit 5dc6decde6f86ba87173a1e10b0de8153999090f
Author: vnugent <public@vaughnnugent.com>
Date:   Mon Jun 24 17:05:40 2024 -0400

    fix ci main plugin name

commit a355e12201f50d8f52738d225c270042913030e2
Author: vnugent <public@vaughnnugent.com>
Date:   Mon Jun 24 16:46:04 2024 -0400

    ci: Consolidate ci configuration

commit 86d6ba0c9869f21b2b16728abf4cb20fcf6ed769
Merge: bbe3b9b 71b581e
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jun 4 16:00:01 2024 -0400

    Merge branch 'master' into develop

commit bbe3b9b80db68cf86e26bd2e40a07c1650031224
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jun 4 15:54:42 2024 -0400

    ignore npm version bump errors for build

commit 45816924e5a47710a6bc4ed0d59ea81a48eddd1e
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jun 4 15:30:35 2024 -0400

    project version in ui

commit 03357c9f7b7fa389d2d426e95d9854b7b04623f9
Author: vnugent <public@vaughnnugent.com>
Date:   Tue Jun 4 12:59:30 2024 -0400

    chore: Essentials upstream update

commit b6d292014700d05a93aa4e486baedf37656f464a
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 23 19:09:28 2024 -0400

    docs: Update readme instructions

commit 5b6b4c06bc4b974e1839ca47c91dd6c903f119fd
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 23 18:17:56 2024 -0400

    build(server): Update Docker config to support new vars

commit c7c9e8a441e99e1dc79e2a690d83281af463d817
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 23 17:40:09 2024 -0400

    update backend deps

commit 06eb12d107f2605cae0f14884de04058c02d29f7
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 23 17:38:22 2024 -0400

    chore: package updates and verify

commit c8e3ca86be45be05c1f76a7dd808275a1afaccb0
Author: vnugent <public@vaughnnugent.com>
Date:   Thu May 16 17:10:27 2024 -0400

    chore: Remove unused cache stuff

commit ba2ee1073a5042bda0afc2b56233fe99d491b39d
Merge: e6b4e60 28e67e5
Author: vnugent <public@va

--- a/ci/plugins.taskfile.yaml
+++ b/ci/plugins.taskfile.yaml
@@ -10,6 +10,7 @@ includes:
     taskfile: install.taskfile.yaml
 
 vars:
+  PLUGIN_NAME: 'SimpleBookmark'
   CORE_VERSION: '1b590c2517fef110564943ed8a10edd11fa758b0'
   ESSENTIALS_VERSION: '451091e93b5feee7a5e01d3a81f5d63efa7ea8be'
   CACHE_VERSION: '930980a1e6b5db24dd4d8beeb115e4279ea79ee2'
@@ -35,9 +36,9 @@ tasks:
     cmds:
    
     - echo "Installing and configuring plugins and UI"
-    - task: build-bookmarks
+    - task: build-proj
 
-  build-bookmarks:
+  build-proj:
     cmds:
     #build front-end
     - cd ../front-end && npm install && npm run build
@@ -46,9 +47,9 @@ tasks:
 
     #build the plugin 
     - cmd: cd ../back-end/src && task build
-    - powershell -Command "mkdir plugins/SimpleBookmark -Force"
+    - powershell -Command "mkdir plugins/{{.PLUGIN_NAME}} -Force"
     #copy the plugin output
-    - powershell -Command "cp -Recurse -Force ../back-end/src/bin/release/net8.0/publish/* plugins/SimpleBookmark/"
+    - powershell -Command "cp -Recurse -Force ../back-end/src/bin/release/net8.0/publish/* plugins/{{.PLUGIN_NAME}}/"
 
   install-accounts:
     cmds:
