fix missing parenthasese for content length param

--- a/ci/container/docker-compose.yaml
+++ b/ci/container/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
     environment:
       MAX_BOOKMARKS: "5000"
       REG_TOKEN_DURATION_MIN: "360"  #6 hours
-      MAX_CONTENT_LENGTH: 5120000    #5MB max upload size
+      MAX_CONTENT_LENGTH: "5120000"  #5MB max upload size
       MAX_LOGIN_ATTEMPS: "10"        #max login attempts before user account is locked out
 
       #SQL Config
