--- a/front-end/Taskfile.yaml
+++ b/front-end/Taskfile.yaml
@@ -5,6 +5,11 @@ version: '3'
 
 tasks:
 
+  package-update:
+    dir: '{{.USER_WORKING_DIR}}'
+    cmds:
+     - npm update
+
   build:
     cmds:
     #install deps and run build
@@ -21,7 +26,7 @@ tasks:
   clean:
     ignore_error: true
     cmds:
-    - cmd: powershell -Command "Remove-Item -Recurse -Force node_modules"
-    - cmd: powershell -Command "Remove-Item -Recurse -Force dist"
-    - cmd: powershell -Command "Remove-Item -Recurse -Force bin"
+    - for: [ node_modules/, dist/, bin/ ]
+      cmd: powershell -Command "Remove-Item -Recurse -Force {{.ITEM}}"
+
     - cmd: powershell -Command "Remove-Item release.tgz"
