package and configuration update for upstream updates

--- a/ci/build.env
+++ b/ci/build.env
@@ -18,31 +18,18 @@ COMPRESSION_LIB_PATH=lib/vnlib_compress.dll
 #  Plugins
 ##########
 
-DEBUG_PLUGINS=false
-MAX_LOGIN_ATTEMPS=10
-MAX_BOOKMARKS=5000
-REG_TOKEN_DURATION_MIN=360
-
 ##########
 #  HTTP
 ##########
 
-#sets the absolute maxium upload size
-MAX_CONTENT_LENGTH=5120000
-
-HTTP_TRACE_ON=false
-HTTP_DOWNSTREAM_SERVERS=[]
-
 #default ssl dir is ssl/
-SSL_JSON={"cert": "ssl/cert.pem", "privkey":"ssl/key.pem"}
+TLS_ENABLE=true
+TLS_CERT=ssl/cert.pem
+TLS_PRIVATE_KEY=ssl/key.pem
 
 #############
 # HC VAULT
 #############
-
-HC_VAULT_ADDR=
-HC_VAULT_TOKEN=
-HC_VAULT_TRUST_CERT=false
 
 ##########
 #  SQL
@@ -57,20 +44,9 @@ SQL_CONNECTION_STRING=Data Source=data/simple-bookmark.db;
 ##############
 
 CACHE_ASM_PATH=VNLib.Data.Caching.Providers.VNCache.dll
-REDIS_CONNECTION_STRING=
-VNCACHE_INITIAL_NODES=[]
-
-#for self contained apps, memcache needs to be true
-MEMCACHE_ONLY=true
 
 ############
 #  SECRETS
 ############
 
 PASSWORD_PEPPER=file://secrets/password-pepper.txt 
-DATABASE_PASSWORD=
-REDIS_PASSWORD=
-
-#no cache, so clear vars
-VNCACHE_CLIENT_PRIVATE_KEY=
-VNCACHE_CACHE_PUBLIC_KEY=
