--- a/ci/taskfile.yaml
+++ b/ci/taskfile.yaml
@@ -8,7 +8,7 @@ version: "3"
 vars:
   BUILDS_URL: https://www.vaughnnugent.com/public/resources/software/builds
   SQLITE_OUT_DIR: "plugins/assets/VNLib.Plugins.Extensions.Loading.Sql.SQLite"
-  WEBSERVER_VERSION: 'a54c9d0da36ee15b5a1b6852b843bc0a40694ce5'
+  WEBSERVER_VERSION: '0419f315e5689e043f311203ab8e61f69f1ee1d6'
 
 includes:
   install:
@@ -57,7 +57,7 @@ tasks:
     - task: install:install
       vars:
         PROJECT_NAME: 'VNLib.Webserver'
-        MODULE_NAME: "VNLib.Webserver"
+        MODULE_NAME: "VNLib.Core"
         FILE_NAME: "linux-x64-release.tgz"
         DIR: 'webserver/'
         VERSION: '{{.WEBSERVER_VERSION}}'
@@ -138,10 +138,10 @@ tasks:
     internal: false
     dotenv: ['build.env']  #use the local .env file when compiling config variables
     cmds:
-      - cmd: powershell mkdir config/ -Force
-        ignore_error: true
-      - cmd: powershell './compile.ps1' -InputDir config-templates/ -OutputDir config/
-      - cmd: powershell cp config-templates/routes.xml config/routes.xml -Force
+     - cmd: powershell mkdir config/ -Force
+       ignore_error: true
+     - cmd: powershell './compile.ps1' -InputDir config-templates/ -OutputDir config/
+     - cmd: powershell cp config-templates/routes.xml config/routes.xml -Force
 
   prune-plugin-libs:
     cmds:
