--- a/ci/build.env
+++ b/ci/build.env
@@ -8,19 +8,15 @@
 #
 
 ##########
-#  _internal_
-##########
-
-#default compression lib for bare metal
-COMPRESSION_LIB_PATH=lib/vnlib_compress.dll
-
-##########
 #  Plugins
 ##########
 
 ##########
 #  HTTP
 ##########
+
+#compressor assembly path
+COMPRESSOR_ASM_PATH=lib/vnlib.net.compression/VNLib.Net.Compression.dll
 
 #default ssl dir is ssl/
 TLS_ENABLE=true
