--- a/front-end/.env
+++ b/front-end/.env
@@ -4,4 +4,4 @@ VITE_CORS_ENABLED=false
 
 #The VNLib.Plugins.Essentials.Accounts plugin security header value
 VITE_WEB_TOKEN_HEADER="X-Web-Token"
-VITE_LOGIN_COOKIE_ID="li"
+VITE_LOGIN_COOKIE_ID="sbstatus"
