--- a/ci/plugins.taskfile.yaml
+++ b/ci/plugins.taskfile.yaml
@@ -9,19 +9,11 @@ includes:
   install:
     taskfile: install.taskfile.yaml
 
-vars:
-  PLUGIN_NAME: 'SimpleBookmark'
-  CORE_VERSION: '0419f315e5689e043f311203ab8e61f69f1ee1d6'
-  ESSENTIALS_VERSION: '451091e93b5feee7a5e01d3a81f5d63efa7ea8be'
-  CACHE_VERSION: '930980a1e6b5db24dd4d8beeb115e4279ea79ee2'
-  USERS_VERSION: '26adc7c79b1bd732c76a7c0ab3638294f697ab03'
-  SESSION_VERSION: '34902c086d1707707b806864363cfaee317213e2'
-  EXTENSIONS_VERSION: '641bdbe75cb0128c09e27f1b92709c86574026ac'
-
 tasks:
 
   all:
     deps:
+    - install-webserver
     - install-rpmalloc
     - install-compressor-lib
     - install-argon2-lib
@@ -41,15 +33,28 @@ tasks:
   build-proj:
     cmds:
     #build front-end
-    - cd ../front-end && npm install && npm run build
+    - cmd: cd ../front-end && task build
     #move dist files to web root
-    - cmd: powershell -Command "cp -Recurse -Force ../front-end/dist {{.USER_WORKING_DIR}}"
+    - cmd: powershell cp -Recurse -Force "../front-end/dist" "build/"
 
     #build the plugin 
     - cmd: cd ../back-end/src && task build
-    - powershell -Command "mkdir plugins/{{.PLUGIN_NAME}} -Force"
-    #copy the plugin output
-    - powershell -Command "cp -Recurse -Force ../back-end/src/bin/release/net8.0/publish/* plugins/{{.PLUGIN_NAME}}/"
+    - cmd: powershell mkdir -Force "build/plugins/{{ .PLUGIN_NAME }}"
+    - cmd: powershell cp -Recurse -Force "../back-end/src/bin/release/net8.0/publish/*" "build/plugins/{{ .PLUGIN_NAME }}/"
+
+  install-webserver:
+    cmds:
+    #clone the webserver (it's cross platform when using dotnet command so just grab the linux version)
+    - task: install:install
+      vars:
+        PROJECT_NAME: 'VNLib.Webserver'
+        MODULE_NAME: "VNLib.Core"
+        FILE_NAME: "linux-x64-release.tgz"
+        DIR: 'build/webserver'
+        VERSION: '{{ .CORE_VERSION }}'
+        HASH: 
+    #remove the executable since its not needed
+    - cmd: cd build/webserver/ && powershell rm VNlib.WebServer
 
   install-accounts:
     cmds:
@@ -59,8 +64,9 @@ tasks:
         PROJECT_NAME: 'VNLib.Plugins.Essentials.Accounts'
         MODULE_NAME: "Plugins.Essentials"
         FILE_NAME: "release.tgz"
-        DIR: './plugins/Essentials.Accounts'
-        VERSION: '{{.ESSENTIALS_VERSION}}'
+        DIR: './build/plugins/Essentials.Accounts'
+        VERSION: '{{ .ESSENTIALS_VERSION }}'
+        HASH: 
 
   install-router:
     cmds:
@@ -70,8 +76,9 @@ tasks:
         PROJECT_NAME: 'VNLib.Plugins.Essentials.Content.Routing'
         MODULE_NAME: "Plugins.Essentials"
         FILE_NAME: "release.tgz"
-        DIR: './plugins/PageRouter'
-        VERSION: '{{.ESSENTIALS_VERSION}}'
+        DIR: './build/plugins/PageRouter'
+        VERSION: '{{ .ESSENTIALS_VERSION }}'
+        HASH: 
 
   install-sessions:
     cmds:
@@ -79,10 +86,11 @@ tasks:
     - task: install:install
       vars:
         PROJECT_NAME: 'SessionProvider'
-        MODULE_NAME: "VNLib.Plugins.Sessions"
+        MODULE_NAME: "Plugins.Essentials"
         FILE_NAME: "release.tgz"
-        DIR: './plugins/SessionProvider'
-        VERSION: '{{.SESSION_VERSION}}'
+        DIR: './build/plugins/SessionProvider'
+        VERSION: '{{ .ESSENTIALS_VERSION }}'
+        HASH: 
 
   install-vncache-sessions:
     cmds:
@@ -90,10 +98,11 @@ tasks:
     - task: install:install
       vars:
         PROJECT_NAME: 'VNLib.Plugins.Sessions.VNCache'
-        MODULE_NAME: "VNLib.Plugins.Sessions"
+        MODULE_NAME: "Plugins.Essentials"
         FILE_NAME: "release.tgz"
-        DIR: './plugins/assets/VNLib.Plugins.Sessions.VNCache'
-        VERSION: '{{.SESSION_VERSION}}'
+        DIR: './build/plugins/assets/VNLib.Plugins.Sessions.VNCache'
+        VERSION: '{{ .ESSENTIALS_VERSION }}'
+        HASH: 
 
   install-users:
     cmds:
@@ -101,10 +110,11 @@ tasks:
     - task: install:install
       vars:
         PROJECT_NAME: 'VNLib.Plugins.Essentials.Users'
-        MODULE_NAME: "VNLib.Plugins.Essentials.Users"
+        MODULE_NAME: "Plugins.Essentials"
         FILE_NAME: "release.tgz"
-        DIR: './plugins/assets/VNLib.Plugins.Essentials.Users'
-        VERSION: '{{.USERS_VERSION}}'
+        DIR: './build/plugins/assets/VNLib.Plugins.Essentials.Users'
+        VERSION: '{{ .ESSENTIALS_VERSION }}'
+        HASH: 
 
   install-vncache:
     cmds:
@@ -114,8 +124,9 @@ tasks:
         PROJECT_NAME: 'VNLib.Data.Caching.Providers.VNCache'
         MODULE_NAME: "VNLib.Data.Caching"
         FILE_NAME: "release.tgz"
-        DIR: './plugins/assets/VNLib.Data.Caching.Providers.VNCache'
-        VERSION: '{{.CACHE_VERSION}}'
+        DIR: './build/plugins/assets/VNLib.Data.Caching.Providers.VNCache'
+        VERSION: '{{ .CACHE_VERSION }}'
+        HASH: 
 
   install-sqlite:
     cmds:
@@ -125,8 +136,9 @@ tasks:
         PROJECT_NAME: 'VNLib.Plugins.Extensions.Loading.Sql.SQLite'
         MODULE_NAME: "VNLib.Plugins.Extensions"
         FILE_NAME: "release.tgz"
-        DIR: './plugins/assets/VNLib.Plugins.Extensions.Loading.Sql.SQLite'
-        VERSION: '{{.EXTENSIONS_VERSION}}'
+        DIR: './build/plugins/assets/VNLib.Plugins.Extensions.Loading.Sql.SQLite'
+        VERSION: '{{ .EXTENSIONS_VERSION }}'
+        HASH:
 
   install-compression:
     cmds:
@@ -136,8 +148,9 @@ tasks:
         PROJECT_NAME: 'VNLib.Net.Compression'
         MODULE_NAME: "VNLib.Core"
         FILE_NAME: "release.tgz"
-        DIR: './lib/vnlib.net.compression'
-        VERSION: '{{.CORE_VERSION}}'
+        DIR: './build/lib/vnlib.net.compression'
+        VERSION: '{{ .CORE_VERSION }}'
+        HASH: 
 
   install-compressor-lib:
     cmds:
@@ -147,8 +160,8 @@ tasks:
         PROJECT_NAME: 'vnlib_compress'
         MODULE_NAME: "VNLib.Core"
         FILE_NAME: "msvc-x64-release-vnlib_compress.tgz"
-        DIR: './lib/vnlib_compress'
-        VERSION: '{{.CORE_VERSION}}'
+        DIR: './build/windows-x86_64/lib/vnlib_compress'
+        VERSION: '{{ .CORE_VERSION }}'
 
     #install compressor plugin
     - task: install:install
@@ -156,45 +169,45 @@ tasks:
         PROJECT_NAME: 'vnlib_compress'
         MODULE_NAME: "VNLib.Core"
         FILE_NAME: "src.tgz"
-        DIR: './lib/vnlib_compress'
-        VERSION: '{{.CORE_VERSION}}'
+        DIR: './build/lib/vnlib_compress'
+        VERSION: '{{ .CORE_VERSION }}'
 
   install-argon2-lib:
     cmds:
     #install the argon2 binary for Windows
     - task: install:install
       vars:
-        PROJECT_NAME: 'phc-winner-argon2'
+        PROJECT_NAME: 'argon2'
         MODULE_NAME: "VNLib.Core"
-        FILE_NAME: "msvc-x64-release-Argon2.tgz"
-        DIR: './lib/argon2'
-        VERSION: '{{.CORE_VERSION}}'
+        FILE_NAME: "msvc-x64-release-argon2.tgz"
+        DIR: './build/windows-x86_64/lib/argon2'
+        VERSION: '{{ .CORE_VERSION }}'
 
     #install the argon2 source code package for Linux and Mac
     - task: install:install
       vars:
-        PROJECT_NAME: 'phc-winner-argon2'
+        PROJECT_NAME: 'argon2'
         MODULE_NAME: "VNLib.Core"
         FILE_NAME: "src.tgz"
-        DIR: './lib/argon2'
-        VERSION: '{{.CORE_VERSION}}'
+        DIR: './build/lib/argon2'
+        VERSION: '{{ .CORE_VERSION }}'
 
   install-rpmalloc:
     cmds:
-    #install the rpmalloc source code package for Linux and Mac
-    - task: install:install
-      vars:
-        PROJECT_NAME: 'vnlib_rpmalloc'
-        MODULE_NAME: "VNLib.Core"
-        FILE_NAME: "src.tgz"
-        DIR: './lib/vnlib_rpmalloc'
-        VERSION: '{{.CORE_VERSION}}'
-
     #install the rpmalloc binary for Windows
     - task: install:install
       vars:
         PROJECT_NAME: 'vnlib_rpmalloc'
         MODULE_NAME: "VNLib.Core"
         FILE_NAME: "msvc-x64-release-vnlib_rpmalloc.tgz"
-        DIR: './lib/vnlib_rpmalloc'
-        VERSION: '{{.CORE_VERSION}}'
+        DIR: './build/windows-x86_64/lib/vnlib_rpmalloc'
+        VERSION: '{{ .CORE_VERSION }}'
+
+    #install the rpmalloc source code package for Linux and Mac
+    - task: install:install
+      vars:
+        PROJECT_NAME: 'vnlib_rpmalloc'
+        MODULE_NAME: "VNLib.Core"
+        FILE_NAME: "src.tgz"
+        DIR: './build/lib/vnlib_rpmalloc'
+        VERSION: '{{ .CORE_VERSION }}'
