--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,10 +20,10 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.17",
-    "@vnuge/vnlib.browser": "https://www.vaughnnugent.com/public/resources/software/builds/Plugins.Essentials/451091e93b5feee7a5e01d3a81f5d63efa7ea8be/@vnuge-vnlib.browser/release.tgz",
+    "@vnuge/vnlib.browser": "./lib/vnlib.browser",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
-    "@vueuse/core": "^10.3.x",
+    "@vueuse/core": "^12.1.x",
     "axios": "^1.4.0",
     "base32-encode": "^2.0.0",
     "flowbite": "^2.2.1",
@@ -45,7 +45,7 @@
     "sass": "^1.62.1",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
-    "vite": "^5.0.x",
+    "vite": "^6.0.x",
     "vue-eslint-parser": "^9.3.0",
     "vue-tsc": "^2.0.x"
   }
